--- a/platzi-video/src/assets/scss/components/Carousel.scss
+++ b/platzi-video/src/assets/scss/components/Carousel.scss
@@ -44,8 +44,9 @@
 		}
 		&-action {
 			width: 24px;
-			&:nth-child(2) {
-				margin-left: 8px;
+			margin-left: 8px;
+			&:nth-child(1) {
+				margin-left: 0;
 			}
 		}
 		
